fix: itembag too much info

--- a/src/components/game/Modals/ItemBag/styles.module.scss
+++ b/src/components/game/Modals/ItemBag/styles.module.scss
@@ -191,22 +191,23 @@
                         z-index: 0;
                     }
 
-                    /* Tooltip */
+                    
+                    /* tooltips */
                     .tooltip {
                         display: none;
                         position: absolute;
-                        bottom: 100%;
+                        bottom: 100%; // aparece acima do ícone
                         left: 50%;
                         transform: translateX(-50%);
                         margin-bottom: 6px;
-                        background: rgba(149, 174, 189, 0.8);
+                        background: #95aebdcc; // #95aebd @ 80%
                         border: 1px solid #3e3631;
                         border-radius: 4px;
                         padding: 4px 8px;
                         font-family: 'SpaceHorse';
                         font-size: 0.8vw;
                         white-space: nowrap;
-                        z-index: 5;
+                        z-index: 3;
 
                         @media (max-width: 700px) {
                             font-size: 2vw;
@@ -214,10 +215,12 @@
                         }
                     }
 
+                    /* ao passar o mouse, exibe o tooltip */
                     &:hover .tooltip {
                         display: block;
                     }
 
+                    /* destaque no hover */
                     &:hover {
                         outline: 2px solid rgba(255, 255, 255, 0.8);
                         border-radius: 6px;
